[project]
name = "api-limit-manager"
version = "0.1.0"
description = "Manage API connection limits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hatchling>=1.27.0",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_limit_manager"]
