[project]
name = "api-limit-manager"
version = "0.1.0"
description = "Manage API connection limits"
authors = [{ name = "7shi", email = "7shi@live.jp" }]
readme = "README.md"
license = { text = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication" }
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.3.6",
]

[project.urls]
Repository = "https://github.com/7shi/api-limit-manager"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "twine>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_limit_manager"]
